--- a/server/public/pages/form.html
+++ b/server/public/pages/form.html
@@ -3,44 +3,61 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Form</title>
+    <title>SuperHero Form</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Contact Form</h1>
+    <h1>Superhero Form</h1>
     <form action="/submit-form" method="POST">
-      <label for="name">Name:</label>
+      <label for="name">SuperHero Name:</label>
       <input type="text" id="name" name="name" required /><br /><br />
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required /><br /><br />
-      <label for="message">Message:</label><br />
+      <label for="email">SuperPower:</label>
+      <input type="text" id="email" name="email" required /><br /><br />
+      <!-- <label for="message">SuperPowers Description:</label><br />
       <textarea
         id="message"
         name="message"
         rows="4"
         cols="50"
         required
-      ></textarea
-      ><br /><br />
+      ></textarea > -->
+      <br /><br />
       <input type="submit" value="Submit" />
     </form>
-    <h1>User Management</h1>
+
+    <h1>Update SuperHeros</h1>
     <form id="updateForm">
-      <label for="currentName">Current name:</label>
+      <label for="currentName">Current SuperHero Name:</label>
       <input type="text" id="currentName" required /><br /><br />
-      <label for="currentEmail">Current email:</label>
-      <input type="email" id="currentEmail" required /><br /><br />
-      <label for="newName">New name:</label>
-      <input type="text" id="newName" required /><br /><br />
-      <label for="newEmail">New email:</label>
-      <input type="email" id="newEmail" required /><br /><br />
-      <button type="submit">Update User</button>
+      <label for="currentEmail">Current Power:</label>
+      <input type="text" id="currentPower"/><br /><br />
+
+      <label for="newName">New SuperHero name:</label>
+      <input type="text" id="newName" /><br /><br />
+      <label for="newPower"> New SuperPower:</label>
+      <input type="text" id="newPower" required /><br /><br />
+
+      <!-- <label for="newEmail">New email:</label>
+      <input type="email" id="newEmail" required /><br /><br /> -->
+      <button type="submit">Update Hero</button>
     </form>
-    <h1>Show Users</h1>
+    <h2>Delete User</d>
+      <br><br>
+   <form id="delete-user">
+      <label for="delete-name">Name:</label>
+      <input type="text" id="delete-name" /><br /><br />
+
+      <label  for="delete-email">Email:</label>
+      <input type="text" id="delete-email" /><br /><br />
+      <button type="submit">Delete User</button><br /><br />
+    </form>
+
+    <h1>Show Current SuperHeros</h1>
     <table id="usersTable">
       <thead>
         <tr>
-          <th>User Name</th>
-          <th>User Email</th>
+          <th>SuperName</th>
+          <th>SuperPowers</th>
         </tr>
       </thead>
       <tbody id="userTableBody">
@@ -53,20 +70,17 @@
         .addEventListener("submit", async (e) => {
           e.preventDefault();
           const currentName = document.getElementById("currentName").value;
-          const currentEmail = document.getElementById("currentEmail").value;
+          const currentEmail = document.getElementById("currentPower").value;
           const newName = document.getElementById("newName").value;
-          const newEmail = document.getElementById("newEmail").value;
+          const newEmail = document.getElementById("newPower").value;
           try {
-            const response = await fetch(
-              `/update-user/${currentName}/${currentEmail}`,
-              {
-                method: "PUT",
-                headers: {
-                  "Content-Type": "application/json",
-                },
-                body: JSON.stringify({ newName, newEmail }),
-              }
-            );
+            const response = await fetch(`/update-user/${currentName}/${currentEmail}`, {
+              method: "PUT",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({ newName, newPower }),
+            });
             const data = await response.json();
             console.log(data);
             renderUsers();
@@ -75,6 +89,25 @@
             alert("Error updating user: " + error.message);
           }
         });
+        //  document.getElementById('delete-user').addEventListener("submit", async(e)=> {
+        //   e.preventDefault();
+        //   const name = document.getElementById("delete-name").value;
+        //   const email = document.getElementById("delete-email").value;
+
+        //   try {
+        //     const response = await fetch(`/user/${name}/${email}`, {
+        //       method: "DELETE",
+        //     });
+        //     if (! response.ok) {
+        //       throw new Error('Error with network');
+        //     }
+        //     const data = await response.text();
+        //     console.log(data);
+        //     renderUsers();
+        //   } catch (error) {
+        //     console.error("Something went wrong" + error.message);
+        //   }
+        // });
       async function fetchUsers() {
         try {
           const response = await fetch("/users");
@@ -100,7 +133,7 @@
           const users = await fetchUsers();
           if (Array.isArray(users) && users.length > 0) {
             users.forEach((user) => {
-              const row = `<tr><td>${user.name}</td><td>${user.email}</td></tr>`;
+              const row = `<tr><td>${user.name}</td><td>${user.messages}</td></tr>`;
               tableBody.innerHTML += row;
             });
           }
